@@ -17,7 +17,7 @@ Ultimately, I want the program to fit a few criteria:
 	  [ ] Melee: basic attack unt    { 3, 1, 1, 1}
 	  [ ] Range: increase atk range  { 2, 1, 2, 1}
 	  [ ] Calvery: increase MV       { 2, 1, 1, 3}
-	[ ] User cursor to select grid and units
+	[X] User cursor to select grid and units
 	[ ] Implimentation of simple move and attack AI
 	[ ] Different terrain types
 
@@ -41,10 +41,10 @@ Thing's that would be awesome but I probably won't be able to implement in time:
 
 Initial Steps:
 [-] Create a 10 x 10 grid to display game elements
-  [ ] A data structure to keep track of the grid and it's contents
+  [X] A data structure to keep track of the grid and it's contents
 [ ] Create a unit structure
   [ ] Create first unit
-[ ] Learn how to use github
+[~] Learn how to use github
 [X] Create basic cursor
   [X] Implement user input
   [X] Implement screen boundaries
